Fix spacing

--- a/assets/css/helpers.sass
+++ b/assets/css/helpers.sass
@@ -79,4 +79,4 @@ $size-tablet: 560px
 @mixin padding-x
   padding: 0
   @media #{$breakpoint-2}
-    padding: 0 1rem
+    padding: 0 1.25rem
